--- a/Frontend/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Frontend/Components/Layout/NavMenu.razor
@@ -23,5 +23,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        
+        @*Test rejestracji*@
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="rejestracja">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Rejestracja - test
+            </NavLink>
+        </div>
     </nav>
 </div>
