--- a/Frontend/Frontend/Components/Pages/Rejestracja.razor
+++ b/Frontend/Frontend/Components/Pages/Rejestracja.razor
@@ -115,7 +115,7 @@
 
             <div class="text-center mt-3">
                 <span>Masz już konto? </span>
-                <a href="/Logowanie">Zaloguj się</a>
+                <a href="/logowanie">Zaloguj się</a>
             </div>
 
         </div>
