--- a/Frontend/Frontend/Components/Layout/MainLayout.razor
+++ b/Frontend/Frontend/Components/Layout/MainLayout.razor
@@ -15,3 +15,26 @@
         </article>
     </main>
 </div>
+<!-- GLOBALNA NAWIGACJA DOLNA -->
+<div class="dolna-nawigacja">
+    <a href="/home">
+        <img src="icons/home.jpg" alt="Home" />
+        <span>Home</span>
+    </a>
+    <a href="/services">
+        <img src="icons/services.jpg" alt="Services" />
+        <span>Services</span>
+    </a>
+    <a href="/calendar">
+        <img src="icons/calendar.jpg" alt="Calendar" />
+        <span>Calendar</span>
+    </a>
+    <a href="/games">
+        <img src="icons/games.jpg" alt="Games" />
+        <span>Games</span>
+    </a>
+    <a href="/profile">
+        <img src="icons/profile.jpg" alt="Profile" />
+        <span>Profile</span>
+    </a>
+</div>
