--- a/Frontend/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Frontend/Components/Layout/NavMenu.razor
@@ -23,6 +23,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="kalendarz">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Kalendarz
+            </NavLink>
+        </div>
         
         @*Test rejestracji*@
         <div class="nav-item px-3">
