Design kalendarz vol 2

--- a/Frontend/Frontend/Components/Layout/MainLayout.razor
+++ b/Frontend/Frontend/Components/Layout/MainLayout.razor
@@ -15,7 +15,7 @@
         </article>
     </main>
 </div>
-<!-- GLOBALNA NAWIGACJA DOLNA -->
+
 <div class="dolna-nawigacja">
     <a href="/home">
         <img src="icons/home.jpg" alt="Home" />
@@ -25,7 +25,7 @@
         <img src="icons/services.jpg" alt="Services" />
         <span>Services</span>
     </a>
-    <a href="/calendar">
+    <a href="/kalendarz">
         <img src="icons/calendar.jpg" alt="Calendar" />
         <span>Calendar</span>
     </a>
