Design kalendarz resposywnosc

--- a/Frontend/Frontend/Components/Pages/Kalendarz.razor.css
+++ b/Frontend/Frontend/Components/Pages/Kalendarz.razor.css
@@ -10,6 +10,13 @@
     max-width: 150px;
     margin-bottom: 1rem;
 }
+.kalendarz-dni {
+    overflow-x: auto;
+    flex-wrap: nowrap;
+    -webkit-overflow-scrolling: touch;
+}
+
+
 
 .kalendarz-dni button {
     width: 44px;
@@ -32,6 +39,9 @@
 .lista-zadan {
     margin-top: 1rem;
     max-height: 60vh;
+    overflow-x: auto;
+    flex-wrap: nowrap;
+    -webkit-overflow-scrolling: touch;
     overflow-y: auto;
     padding-right: 4px;
     padding-bottom: calc(80px + env(safe-area-inset-bottom));
@@ -49,6 +59,9 @@
 
 .card {
     background-color: #fff;
+    overflow-x: auto;
+    flex-wrap: nowrap;
+    -webkit-overflow-scrolling: touch;
     border-left: 6px solid #4FB89F;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.03);
