--- a/Frontend/Frontend/Components/Pages/Kalendarz.razor
+++ b/Frontend/Frontend/Components/Pages/Kalendarz.razor
@@ -3,7 +3,7 @@
 
 <div class="container kalendarz-container">
     <!-- Górna sekcja wyboru miesiąca i przycisku odświeżania -->
-    <div class="d-flex justify-content-between align-items-center mb-4">
+    <div class="d-flex flex-wrap gap-2 justify-content-center mb-3 kalendarz-dni">
         <div class="input-group w-50">
             <span class="input-group-text bg-white border-end-0">
                 <i class="bi bi-calendar3"></i>
