--- a/Frontend/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Frontend/Components/Layout/NavMenu.razor
@@ -35,5 +35,10 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Rejestracja - test
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="logowanie">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Logowanie - test
+            </NavLink>
+        </div>
     </nav>
 </div>
