--- a/Frontend/Core/Components/Pages/Register.razor
+++ b/Frontend/Core/Components/Pages/Register.razor
@@ -50,7 +50,10 @@
                         <span>Masz już konto? </span>
                         <a href="/logowanie">Zaloguj się</a>
                     </div>
-
+                    <div class="text-center mt-3">
+                        <span>DEBUG:  </span>
+                        <div>@Debug</div>
+                    </div>
                 </div>
             </div>
         </div>
