--- a/Frontend/Core/wwwroot/css/app.css
+++ b/Frontend/Core/wwwroot/css/app.css
@@ -1,6 +1,9 @@
 ﻿html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     background: linear-gradient(135deg, #29C3EE, #2CB45E);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 .glass-box {
