--- a/Frontend/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Frontend/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Frontend</a>
+        <a class="navbar-brand" href="">Core</a>
     </div>
 </div>
 
@@ -28,7 +28,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Kalendarz
             </NavLink>
         </div>
-        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="newhome">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Nowy panel glowny
+            </NavLink>
+        </div>
+
         @*Test rejestracji*@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="rejestracja">
