--- a/Frontend/Frontend/Components/Pages/Kalendarz.razor
+++ b/Frontend/Frontend/Components/Pages/Kalendarz.razor
@@ -1,9 +1,9 @@
 ﻿@page "/kalendarz"
 <h3 class="text-center my-4">Twój plan dnia</h3>
 
-<div class="container kalendarz-container">
+<div class="container calendar-container">
     <!-- Górna sekcja wyboru miesiąca i przycisku odświeżania -->
-    <div class="d-flex flex-wrap gap-2 justify-content-center mb-3 kalendarz-dni">
+    <div class="d-flex flex-wrap gap-2 justify-content-center mb-3 calendar-days">
         <div class="input-group w-50">
             <span class="input-group-text bg-white border-end-0">
                 <i class="bi bi-calendar3"></i>
@@ -20,10 +20,10 @@
     </div>
 
     <!-- Dni tygodnia -->
-    <div class="d-flex justify-content-between mb-3 kalendarz-dni">
+    <div class="d-flex justify-content-between mb-3 calendar-days">
         @foreach (var day in dniTygodnia)
         {
-            <button class="btn @((day == aktywnyDzien) ? "btn-aktywny-dzien" : "") px-3">
+            <button class="btn @((day == aktywnyDzien) ? "btn-active-day" : "") px-3">
                 <div class="fw-semibold">@day</div>
             </button>
         }
@@ -34,7 +34,7 @@
         @foreach (var wpis in wpisy.Select((value, index) => new { value, index }))
         {
             var wpisId = $"wpis{wpis.index}";
-            <div class="card shadow-sm mb-3 @(wpis.value.Wazny ? "wpis-wazny" : "")">
+            <div class="card shadow-sm mb-3 @(wpis.value.Wazny ? "important-entry" : "")">
                 <div class="card-body d-flex align-items-center justify-content-between" data-bs-toggle="collapse" data-bs-target=@($"#{wpisId}") style="cursor: pointer;">
                     <div class="d-flex align-items-center">
                         <div class="me-3 godzina-wpisu" style="min-width: 70px;">@wpis.value.Godzina</div>
@@ -45,10 +45,10 @@
                     </div>
                     <div class="d-flex align-items-center">
                         <!-- Dzwoneczek powiadomienia -->
-                        <button class="btn powiadomienie-btn" @onclick="() => ToggleNotification(wpis.index)">
+                        <button class="btn notification-btn" @onclick="() => ToggleNotification(wpis.index)">
                             <i class="bi bi-bell @((wpis.value.PowiadomienieAktywne) ? "text-success" : "text-secondary")" style="font-size: 1.5rem;"></i>
                         </button>
-                        <button class="btn gwiazdka-btn" @onclick="(e => ToggleWazny(wpis.index))" title="Oznacz jako ważne">
+                        <button class="btn star-btn" @onclick="(e => ToggleWazny(wpis.index))" title="Oznacz jako ważne">
                             <i class="bi @(wpis.value.Wazny ? "bi-star-fill text-warning" : "bi-star text-secondary")" style="font-size: 1.5rem;"></i>
                         </button>
                         <!-- Powiadomienie ustawione -->
