profil + polski navbar

--- a/Frontend/Core/Components/Layout/MainLayout.razor
+++ b/Frontend/Core/Components/Layout/MainLayout.razor
@@ -13,24 +13,24 @@
 </div>
 
 <div class="dolna-nawigacja">
-    <a href="/home">
+    <a href="/newhome">
         <img src="icons/home.jpg" alt="Home" />
-        <span>Home</span>
+        <span>Strona główna</span>
     </a>
     <a href="/services">
         <img src="icons/services.jpg" alt="Services" />
-        <span>Services</span>
+        <span>Usługi</span>
     </a>
     <a href="/kalendarz">
-        <img src="icons/calendar.jpg" alt="Calendar" />
-        <span>Calendar</span>
+        <img src="icons/calendar.jpg" alt="Kalendarz" />
+        <span>Kalendarz</span>
     </a>
     <a href="/games">
-        <img src="icons/games.jpg" alt="Games" />
-        <span>Games</span>
+        <img src="icons/games.jpg" alt="Gry" />
+        <span>Gry</span>
     </a>
-    <a href="/profile">
-        <img src="icons/profile.jpg" alt="Profile" />
-        <span>Profile</span>
+    <a href="/profil">
+        <img src="icons/profile.jpg" alt="Profil" />
+        <span>Profil</span>
     </a>
 </div>
