--- a/Frontend/Core/Components/Pages/FAQ.razor
+++ b/Frontend/Core/Components/Pages/FAQ.razor
@@ -1,4 +1,4 @@
-﻿<h2>FAQ</h2>
+﻿<h2 class="text-center">FAQ</h2>
 
 <ol class="pb-10">
     <li>
@@ -86,5 +86,3 @@
         </div>
     </li>
 </ol>
-<br />
-<br />
