--- a/Frontend/Core/Components/Pages/NewHome.razor
+++ b/Frontend/Core/Components/Pages/NewHome.razor
@@ -5,10 +5,12 @@
     <!-- Header -->
     <div class="d-flex justify-content-between align-items-center mb-4">
         <img src="Images/szpital_brzeziny_logo_uzupelniajace.png" alt="Logo" class="logo-small" />
-        <div class="d-flex align-items-center">
-            <!-- Ustawić działające zdjęcie -->
-            <img src="https://via.placeholder.com/40" alt="Profil" class="profile-icon" />
-        </div>
+        <a href="/profil">
+            <div class="d-flex align-items-center">
+                <!-- Ustawić działające zdjęcie -->
+                <img src="https://via.placeholder.com/40" alt="Profil" class="profile-icon" />
+            </div>
+        </a>
     </div>
 
     <!-- Dynamic Greeting -->
