--- a/Frontend/Core/Components/Pages/Profil.razor
+++ b/Frontend/Core/Components/Pages/Profil.razor
@@ -24,17 +24,17 @@
     <!-- Dane zdrowotne -->
     <div class="row text-center mb-3">
         <div class="col">
-            <i class="bi bi-heart-pulse health-icon icon-green"></i>
+            <i class="bi bi-heart-pulse health-icon icon-green" style="color: #057E38 !important;"></i>
             <p class="label">bicie serca</p>
             <strong class="value-green">210 bpm</strong>
         </div>
         <div class="col">
-            <i class="bi bi-fire health-icon icon-light-green"></i>
+            <i class="bi bi-fire health-icon icon-light-green" style="color: #057E38 !important;"></i>
             <p class="label">Spalone kalorie</p>
             <strong class="value-light-green">32497 cal</strong>
         </div>
         <div class="col">
-            <i class="bi bi-person-fill-down health-icon icon-blue"></i>
+            <i class="bi bi-person-fill-down health-icon icon-blue" style="color: #057E38 !important;"></i>
             <p class="label">Waga</p>
             <strong class="value-dark">87 KG</strong>
         </div>
