Services main page

--- a/Frontend/Core/Components/Layout/MainLayout.razor
+++ b/Frontend/Core/Components/Layout/MainLayout.razor
@@ -17,8 +17,8 @@
         <img src="icons/home.jpg" alt="Home" />
         <span>Strona główna</span>
     </a>
-    <a href="/services">
-        <img src="icons/services.jpg" alt="Services" />
+    <a href="/care">
+        <img src="icons/services.jpg" alt="Zabiegi" />
         <span>Usługi</span>
     </a>
     <a href="/kalendarz">
