--- a/Frontend/Core/Components/Layout/NavMenu.razor
+++ b/Frontend/Core/Components/Layout/NavMenu.razor
@@ -33,7 +33,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Nowy panel glowny
             </NavLink>
         </div>
-
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="care">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Zabiegi - test
+            </NavLink>
+        </div>
         @*Test rejestracji*@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="rejestracja">
