--- a/Frontend/Core/Components/Layout/MainLayout.razor
+++ b/Frontend/Core/Components/Layout/MainLayout.razor
@@ -1,36 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
-
-<div class="dolna-nawigacja">
-    <a href="/home">
-        <img src="icons/home.jpg" alt="Home" />
-        <span>Home</span>
-    </a>
-    <a href="/services">
-        <img src="icons/services.jpg" alt="Services" />
-        <span>Services</span>
-    </a>
-    <a href="/kalendarz">
-        <img src="icons/calendar.jpg" alt="Calendar" />
-        <span>Calendar</span>
-    </a>
-    <a href="/games">
-        <img src="icons/games.jpg" alt="Games" />
-        <span>Games</span>
-    </a>
-    <a href="/profile">
-        <img src="icons/profile.jpg" alt="Profile" />
-        <span>Profile</span>
-    </a>
+<NavMenu/>
+<div class="main-layout">
+    @Body
 </div>
