--- a/Frontend/Core/Components/Layout/NavMenu.razor
+++ b/Frontend/Core/Components/Layout/NavMenu.razor
@@ -1,44 +1,18 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">Core</a>
+﻿<nav class="bottom-navbar">
+    <div class="bottom-nav">
+        <NavLink class="bottom-nav-link" href="rejestracja">
+            <span class="bi bi-pencil-square"></span>
+            <span class="bottom-nav-text">Rejestracja</span>
+        </NavLink>
+
+        <NavLink class="bottom-nav-link" href="logowanie">
+            <span class="bi bi-box-arrow-in-right"></span>
+            <span class="bottom-nav-text">Logowanie</span>
+        </NavLink>
+
+        <NavLink class="bottom-nav-link" href="kalendarz">
+            <span class="bi bi-calendar-event-fill"></span>
+            <span class="bottom-nav-text">Kalendarz</span>
+        </NavLink>
     </div>
-</div>
-
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
-
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="kalendarz">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Kalendarz
-            </NavLink>
-        </div>
-        
-        @*Test rejestracji*@
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="rejestracja">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Rejestracja - test
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="logowanie">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Logowanie - test
-            </NavLink>
-        </div>
-    </nav>
-</div>
+</nav>
