--- a/Frontend/Core/Components/Pages/Login.razor
+++ b/Frontend/Core/Components/Pages/Login.razor
@@ -5,7 +5,7 @@
 @inherits Core.Components.BaseClassess.CustomComponentBase
 
 <div class="glass-box">
-    <img src="Images/szpital_brzeziny_logo_uzupelniajace.png" alt="Logo" class="mb-0" />
+    @* <img src="Images/szpital_brzeziny_logo_uzupelniajace.png" alt="Logo" class="mb-0" /> *@
     <h3 class="text-center my-4 mt-0">Logowanie</h3>
 
     <EditForm Model="_loginRequest" OnValidSubmit="HandleLogin">
