--- a/Frontend/Core/Components/Pages/Calendar.razor
+++ b/Frontend/Core/Components/Pages/Calendar.razor
@@ -1,12 +1,12 @@
 @inherits Core.Components.BaseClassess.CustomComponentBase
 @page "/kalendarz"
 
-<h3 class="text-center my-4">Twój plan dnia</h3>
+<h3 class="text-center my-4">Twój plan daysa</h3>
 
 @if (IsDataLoaded)
 {
-	<div class="container kalendarz-container">
-		<div class="d-flex flex-wrap gap-2 justify-content-center mb-3 kalendarz-dni">
+	<div class="container calendar-container">
+		<div class="d-flex flex-wrap gap-2 justify-content-center mb-3 calendar-days">
 			<div class="input-group w-50">
 				<span class="input-group-text bg-white border-end-0">
 					DEBUG: @Debug
@@ -27,17 +27,17 @@
 			</button>
 		</div>
 
-		<div class="d-flex justify-content-between mb-3 kalendarz-dni">
+		<div class="d-flex justify-content-between mb-3 calendar-days">
 			@foreach (DateOnly day in DisplayedDateSpan.GetDaysBeetween())
 			{
-				<button @onclick="() => SetSelectedDay(day)" class="btn @((day == SelectedDay) ? "btn-aktywny-dzien" : "") px-3">
+				<button @onclick="() => SetSelectedDay(day)" class="btn @((day == SelectedDay) ? "btn-active-day" : "") px-3">
 					<div class="fw-semibold">@GetDayString(day)</div>
 				</button>
 			}
 
 		</div>
 
-		<div class="lista-zadan mt-4">
+		<div class="task-list mt-4">
 			@foreach (var calendarItem in CalendarItems.Where(x => DateOnly.FromDateTime(x.Time) == SelectedDay))
 			{
 				<div class="card shadow-sm mb-3">
@@ -57,10 +57,10 @@
 						</div>
 
 						<div class="d-flex align-items-center">
-							<button class="btn powiadomienie-btn">
+							<button class="btn notification-btn">
 								<i class="bi bi-bell" style="font-size: 1.5rem;"></i>
 							</button>
-							<button class="btn gwiazdka-btn" title="Oznacz jako wa¿ne">
+							<button class="btn star-btn" title="Oznacz jako wa¿ne">
 								<i class="bi bi-star" style="font-size: 1.5rem;"></i>
 							</button>
 						</div>
