--- a/Frontend/Core/Components/Pages/Calendar.razor
+++ b/Frontend/Core/Components/Pages/Calendar.razor
@@ -1,5 +1,6 @@
 @inherits Core.Components.BaseClassess.CustomComponentBase
 @page "/kalendarz"
+@page "/calendar-item/{id:int}"
 
 <h3 class="text-center my-4">Twój plan daysa</h3>
 
