Świadczenia 1st release

--- a/Frontend/Core/Components/Pages/NewHome.razor
+++ b/Frontend/Core/Components/Pages/NewHome.razor
@@ -28,10 +28,10 @@
             </div>
         </div>
         <div class="col-6 col-md-3">
-            <div class="tile shadow-sm">
+            <a href="/doctors" class="tile shadow-sm">
                 <i class="bi bi-chat-dots-fill tile-icon"></i>
-                <p>Czaty z lekarzami</p>
-            </div>
+                <p>Lista z lekarzami</p>
+            </a>
         </div>
         <div class="col-6 col-md-3">
             <div class="tile shadow-sm">
