Strona gry + gra

--- a/Frontend/Core/Components/Layout/MainLayout.razor
+++ b/Frontend/Core/Components/Layout/MainLayout.razor
@@ -25,7 +25,7 @@
         <img src="icons/calendar.jpg" alt="Kalendarz" />
         <span>Kalendarz</span>
     </a>
-    <a href="/games">
+    <a href="/gry">
         <img src="icons/games.jpg" alt="Gry" />
         <span>Gry</span>
     </a>
